обновил руты к картинкам у компонентов

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -24,7 +24,7 @@
       width: 12px;
       height: 8px;
       content: "";
-      background: url("../components/checkbox/expand-more.png") no-repeat;
+      background: url("../../components/checkbox/expand-more.png") no-repeat;
       cursor: pointer;
     }
   }
