--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -89,7 +89,7 @@
     box-sizing: border-box;
     width: 24px;
     height: 24px;
-    background: url("../components/header/user.svg") no-repeat;
+    background: url("../../components/header/user.svg") no-repeat;
     border: none;
     cursor: pointer;
     content: "";
