--- a/src/components/hotel-card/hotel-card.scss
+++ b/src/components/hotel-card/hotel-card.scss
@@ -75,7 +75,7 @@
     height: 13px;
     content: "";
     border: none;
-    background: url("../components/hotel-card/expand-more.png") no-repeat;
+    background: url("../../components/hotel-card/expand-more.png") no-repeat;
   }
 }
 
