--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -70,7 +70,7 @@
     height: 17px;
     margin: auto;
     content: "";
-    background: url("../components/pagination/arrow.png") no-repeat;
+    background: url("../../components/pagination/arrow.png") no-repeat;
   }
 }
 
