--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -67,7 +67,7 @@
   transition: border 0.4s ease;
 
   &--icon {
-    background: url("../components/input/expand-more.svg") no-repeat;
+    background: url("../../components/input/expand-more.svg") no-repeat;
     background-position: 95% center;
   }
 
