--- a/src/components/likebtn/likebtn.scss
+++ b/src/components/likebtn/likebtn.scss
@@ -46,7 +46,7 @@
   left: 3px;
   width: 10px;
   height: 8px;
-  background: url("../components/likebtn/like.png") no-repeat;
+  background: url("../../components/likebtn/like.png") no-repeat;
 }
 
 .likebtn__item--active button {
@@ -54,6 +54,6 @@
   border-color: $accentColor;
 
   &::after {
-    background: url("../components/likebtn/like-active.png") no-repeat;
+    background: url("../../components/likebtn/like-active.png") no-repeat;
   }
 }
