--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -1,7 +1,7 @@
 mixin logo(options = {})
   if (options.isBig) 
     div(class="logo logo--big")
-      img(width="48" height="48" src="../components/logo/logo--big.png", alt="toxin")
+      img(width="48" height="48" src="../../components/logo/logo--big.png", alt="toxin")
   else
     div(class="logo")
       a(href="#" class="logo__link")
