--- a/src/page/cards/cards.scss
+++ b/src/page/cards/cards.scss
@@ -29,7 +29,7 @@
   margin: 0;
 }
 
-@import "../components/total-card/total-card";
-@import "../components/register-card/register-card";
-@import "../components/auth-card/auth-card";
-@import "../components/hotel-card/hotel-card";
+@import "../../components/total-card/total-card";
+@import "../../components/register-card/register-card";
+@import "../../components/auth-card/auth-card";
+@import "../../components/hotel-card/hotel-card";
