--- a/src/page/main/main.pug
+++ b/src/page/main/main.pug
@@ -1,5 +1,5 @@
-extends ../layout/main.pug
-include ../components/date-wishes/date-wishes
+extends ../../layout/main.pug
+include ../../components/date-wishes/date-wishes
 
 block variables
   - var title = "Toxin - главная!"
