--- a/src/page/registration/registration.pug
+++ b/src/page/registration/registration.pug
@@ -1,5 +1,5 @@
-extends ../layout/main.pug
-include ../components/register-card/register-card
+extends ../../layout/main.pug
+include ../../components/register-card/register-card
 
 block variables
   - var title = "Toxin - регистрация!"
