--- a/src/page/auth/auth.pug
+++ b/src/page/auth/auth.pug
@@ -1,5 +1,5 @@
-extends ../layout/main.pug
-include ../components/auth-card/auth-card
+extends ../../layout/main.pug
+include ../../components/auth-card/auth-card
 
 block variables
   - var title = "Toxin - авторизация!"
