--- a/src/page/form-elements/form-elements.pug
+++ b/src/page/form-elements/form-elements.pug
@@ -1,17 +1,18 @@
-extends ../layout/ui-kit.pug
-include ../components/input/input
-include ../components/checkbox/checkbox
-include ../components/radiobtn/radiobtn
-include ../components/toggle/toggle
-include ../components/likebtn/likebtn
-include ../components/ratebtn/ratebtn
-include ../components/range-slider/range-slider
-include ../components/button/button
-include ../components/title/title
-include ../components/pagination/pagination
-include ../components/features/features
-include ../components/bullet-list/bullet-list
-include ../components/comment/comment
+extends ../../layout/ui-kit.pug
+include ../../components/input/input
+include ../../components/checkbox/checkbox
+include ../../components/radiobtn/radiobtn
+include ../../components/toggle/toggle
+include ../../components/likebtn/likebtn
+include ../../components/ratebtn/ratebtn
+include ../../components/range-slider/range-slider
+include ../../components/button/button
+include ../../components/title/title
+include ../../components/pagination/pagination
+include ../../components/features/features
+include ../../components/bullet-list/bullet-list
+include ../../components/comment/comment
+
 block variables
   - var title = "Toxin - элементы форм"
   - var pageClass = "form-elements"
@@ -146,12 +147,12 @@ block content
                 {
                   title: "Комфорт",
                   descr: "Шумопоглощающие стены",
-                  srcIcon: "../components/features/emoticon.png"
+                  srcIcon: "../../components/features/emoticon.png"
                 },
                 {
                   title: "Удобство",
                   descr: "Окно в каждой из спален",
-                  srcIcon: "../components/features/city.png"
+                  srcIcon: "../../components/features/city.png"
                 }
               ]
             })
@@ -160,7 +161,7 @@ block content
               authorName: "Мурад Сарафанов",
               datePost: "5 дней назад",
               like: 12,
-              avatarSrc: "../components/comment/murad.png",
+              avatarSrc: "../../components/comment/murad.png",
               text:
                 "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."
             })  
