--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -1,9 +1,9 @@
-extends ../layout/main.pug
-include ../components/input/input
-include ../components/range-slider/range-slider
-include ../components/checkbox/checkbox
-include ../components/hotel-card/hotel-card
-include ../components/pagination/pagination
+extends ../../layout/main.pug
+include ../../components/input/input
+include ../../components/range-slider/range-slider
+include ../../components/checkbox/checkbox
+include ../../components/hotel-card/hotel-card
+include ../../components/pagination/pagination
 
 block variables
   - var title = "Toxin - подбери свой отель!"
@@ -21,7 +21,7 @@ block variables
           starCount: 5,
           idRateBtn: "luxHotelRate",
           images: [
-            { src: "../components/hotel-card/one-hotel.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/one-hotel.png", alt: "Красивый отель" }
           ]
         },
         {
@@ -32,7 +32,7 @@ block variables
           starCount: 4,
           idRateBtn: "luxHotelRate1",
           images: [
-            { src: "../components/hotel-card/double-hotel.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/double-hotel.png", alt: "Красивый отель" }
           ]
         },
         {
@@ -44,7 +44,7 @@ block variables
           starCount: 3,
           idRateBtn: "luxHotelRate2",
           images: [
-            { src: "../components/hotel-card/hotel-3.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/hotel-3.png", alt: "Красивый отель" }
           ]
         },
         {
@@ -55,7 +55,7 @@ block variables
           starCount: 5,
           idRateBtn: "luxHotelRate3",
           images: [
-            { src: "../components/hotel-card/hotel-4.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/hotel-4.png", alt: "Красивый отель" }
           ]
         },
         {
@@ -66,7 +66,7 @@ block variables
           starCount: 4,
           idRateBtn: "luxHotelRate4",
           images: [
-            { src: "../components/hotel-card/hotel-5.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/hotel-5.png", alt: "Красивый отель" }
           ]
         },
         {
@@ -77,7 +77,7 @@ block variables
           starCount: 3,
           idRateBtn: "luxHotelRate5",
           images: [
-            { src: "../components/hotel-card/hotel-6.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/hotel-6.png", alt: "Красивый отель" }
           ]
         },
         {
@@ -88,7 +88,7 @@ block variables
           reviewCount: 45,
           idRateBtn: "luxHotelRate6",
           images: [
-            { src: "../components/hotel-card/hotel-7.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/hotel-7.png", alt: "Красивый отель" }
           ]
         },
         {
@@ -99,7 +99,7 @@ block variables
           reviewCount: 39,
           idRateBtn: "luxHotelRate7",
           images: [
-            { src: "../components/hotel-card/hotel-8.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/hotel-8.png", alt: "Красивый отель" }
           ]
         },
         {
@@ -110,7 +110,7 @@ block variables
           reviewCount: 77,
           idRateBtn: "luxHotelRate8",
           images: [
-            { src: "../components/hotel-card/hotel-9.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/hotel-9.png", alt: "Красивый отель" }
           ]
         },
         {
@@ -121,7 +121,7 @@ block variables
           reviewCount: 25,
           idRateBtn: "luxHotelRate9",
           images: [
-            { src: "../components/hotel-card/hotel-10.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/hotel-10.png", alt: "Красивый отель" }
           ]
         },
         {
@@ -132,7 +132,7 @@ block variables
           reviewCount: 15,
           idRateBtn: "luxHotelRate10",
           images: [
-            { src: "../components/hotel-card/hotel-11.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/hotel-11.png", alt: "Красивый отель" }
           ]
         },
         {
@@ -143,7 +143,7 @@ block variables
           reviewCount: 55,
           idRateBtn: "luxHotelRate11",
           images: [
-            { src: "../components/hotel-card/hotel-12.png", alt: "Красивый отель" }
+            { src: "../../components/hotel-card/hotel-12.png", alt: "Красивый отель" }
           ]
         }
       ]
