--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -54,8 +54,8 @@
     font-weight: bold;
     background: linear-gradient(
       180deg,
-      $accentSecondColor 0%,
-      $accentSecondGradColor 100%
+      $accentSecondСolor 0%,
+      $accentGradSecondСolor 100%
     );
     border-radius: 50%;
   }
