заменил заглушки на реальные ссылки

--- a/src/components/auth-card/auth-card.pug
+++ b/src/components/auth-card/auth-card.pug
@@ -12,4 +12,4 @@ mixin authCard()
         +button({ title: "Войти", isHaveIcon: true, buttonType: "submit" })
       .auth-card__account-enter
         p Нет аккаунта на Toxin?
-        +button({ path: "#", title: "Создать",  isEmptyStyle: true })
+        +button({ path: "/registration.html", title: "Создать",  isEmptyStyle: true })
