--- a/src/components/date-wishes/date-wishes.pug
+++ b/src/components/date-wishes/date-wishes.pug
@@ -13,4 +13,4 @@ mixin dateWishes()
             div(id="date-picker-container" class="date-picker-container")
           +input({ id: 'number-guests-input', isFakeInput: true, labelName: 'Гости', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: 'Сколько гостей' })
           div(id="drop-down-container" class="drop-down-container")
-          +button({ title: 'Подобрать номер', isHaveIcon: true, buttonType: 'submit' })
+          +button({ title: 'Подобрать номер', path:"/rooms.html", isHaveIcon: true, buttonType: 'submit' })
