--- a/src/components/date-wishes/date-wishes.scss
+++ b/src/components/date-wishes/date-wishes.scss
@@ -19,11 +19,14 @@
   }
 
   .button {
+    box-sizing: border-box;
+    display: block;
     width: 100%;
     margin-top: 31px;
     padding: 15px 20px;
     padding-top: 14px;
     font-weight: normal;
+    text-align: center;
   }
 
   .button--icon {
