--- a/src/components/hotel-card/hotel-card.scss
+++ b/src/components/hotel-card/hotel-card.scss
@@ -63,7 +63,12 @@
   width: 42px;
   height: 152px;
   font-size: 0;
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 99.99%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0) 99.99%,
+    rgba(255, 255, 255, 0) 100%
+  );
   border: none;
   border-radius: 5px 0 0 0;
 
@@ -105,6 +110,17 @@
 .hotel-card__title {
   margin: 0;
   font-size: 13px;
+
+  a {
+    color: transparent;
+    text-decoration: none;
+    color: $contentColor;
+    transition: color 0.4s ease;
+
+    &:hover {
+      color: transparentize($contentColor, 0.5);
+    }
+  }
 
   b {
     font-size: 12px;
