подключил стили typograph

--- a/src/page/colors-and-type/colors-and-type.scss
+++ b/src/page/colors-and-type/colors-and-type.scss
@@ -1,6 +1,7 @@
 @import "../../style/utils/variables.scss";
 @import "../../components/logo/logo";
 @import "../../components/color-pallete/color-pallete.scss";
+@import "../../components/typograph/typograph.scss";
 
 .colors-and-type-page__pallete {
   margin: 0;
