--- a/src/page/colors-and-type/colors-and-type.scss
+++ b/src/page/colors-and-type/colors-and-type.scss
@@ -20,3 +20,13 @@
     margin-bottom: 20px;
   }
 }
+
+.colors-and-type__typograph {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  li {
+    margin-bottom: 20px;
+  }
+}
