сократил название классов с colors-and-type-page на colors-and-type

--- a/src/page/colors-and-type/colors-and-type.pug
+++ b/src/page/colors-and-type/colors-and-type.pug
@@ -4,12 +4,12 @@ include ../../components/typograph/typograph
 
 block variables
   - var title = "Toxin - типографика!"
-  - var pageClass = "colors-and-type-page"
+  - var pageClass = "colors-and-type"
 
 block content
   .container
-    .colors-and-type-page__wrap
-      ul.colors-and-type-page__pallete
+    .colors-and-type__wrap
+      ul.colors-and-type__pallete
         li
           +colorPallete({
             title: "Dark Shade 100%",
