--- a/src/components/typograph/typograph.pug
+++ b/src/components/typograph/typograph.pug
@@ -1,2 +1,23 @@
 mixin typograph(options = {})
-  h2 hello from typograph
+  -
+    const isTitle = !!options.title;
+
+    const labelClass = options.labelModif
+      ? `typograph__label  typograph__label--${options.labelModif}`
+      : "typograph__label";
+
+    const titleClass = options.titleModif
+      ? `typograph__title  typograph__title--${options.titleModif}`
+      : "typograph__title";
+
+    const textClass = options.textModif
+      ? `typograph__text  typograph__text--${options.textModif}`
+      : "typograph__text";
+
+  section.typograph
+    .typograph__wrap
+      p(class=labelClass)= options.label
+      if (isTitle)
+        h2(class=titleClass)= options.title
+      else
+        p(class=textClass)= options.text
