добавил цвет для typograph__text

--- a/src/components/typograph/typograph.scss
+++ b/src/components/typograph/typograph.scss
@@ -46,5 +46,6 @@
   margin: 0;
   font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
   font-size: 14px;
+  color: transparentize($contentColor, 0.75);
   font-weight: normal;
 }
