--- a/src/page/colors-and-type/colors-and-type.scss
+++ b/src/page/colors-and-type/colors-and-type.scss
@@ -22,7 +22,6 @@
 }
 
 .colors-and-type__typograph {
-  width: 34.7%;
   margin: 0;
   padding: 0;
   padding-right: 51px;
@@ -36,5 +35,22 @@
         padding-right: 30px;
       }
     }
+  }
+}
+
+@media(max-width: 425px) {
+  .colors-and-type__wrap {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media(max-width: 860px) {
+  .colors-and-type__wrap {
+    flex-direction: column;
+  }
+
+  .colors-and-type__pallete {
+    margin-bottom: 60px;
   }
 }
