заменил ' на "" в header

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -4,24 +4,24 @@ include ../main-menu/main-menu
 
 -
   const menuItems = [
-    { title: 'О нас', path: '#' }, 
-    { 
-      title: 'Услуги', 
-      path: '#', 
-      subMenu: [ 
-        { title: 'Подбор отелей', path: '#' }, 
-        { title: 'Заказать трансфер', path: '#' }, 
-        { title: 'Рейтинг отелей', path: '#' } 
+    { title: "О нас", path: "#" },
+    {
+      title: "Услуги",
+      path: "#",
+      subMenu: [
+        { title: "Подбор отелей", path: "#" },
+        { title: "Заказать трансфер", path: "#" },
+        { title: "Рейтинг отелей", path: "#" }
       ]
-    }, 
-    { title: 'Вакансии', path: '#' },
-    { title: 'Новости', path: '#' },
-    { 
-      title: 'Соглашения', 
-      path: '#',
-      subMenu: [ 
-        { title: 'Пользовательские', path: '#' }, 
-        { title: 'Международные', path: '#' }
+    },
+    { title: "Вакансии", path: "#" },
+    { title: "Новости", path: "#" },
+    {
+      title: "Соглашения",
+      path: "#",
+      subMenu: [
+        { title: "Пользовательские", path: "#" },
+        { title: "Международные", path: "#" }
       ]
     }
   ];
