размечиваю headers-and-footers

--- a/src/page/headers-and-footers/headers-and-footers.pug
+++ b/src/page/headers-and-footers/headers-and-footers.pug
@@ -1,5 +1,16 @@
-extends ../../layout/ui-kit.pug
+include ../../components/logo/logo
+include ../../components/header/header
+include ../../components/footer/footer
 
-block variables
-  - var title = "Toxin - шапки и подвалы!"
-  - var pageClass = "headers-and-footers-page"
+<!DOCTYPE html>
+html(lang="en")
+  head
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    title "Toxin - шапки и подвалы!"
+  body(class="headers-and-footers")
+    +logo({ isBig: true })
+    +header({ isEnglish: true })
+    +header({ isEnglish: true, userName: "Cosmin Negoita" })
+    +footer()
