задал background-color для footer компонента

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,5 +1,6 @@
 .page-footer {
   position: relative;
+  background-color: #fff;
   box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
 
   &--border-top {
