--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -6,48 +6,51 @@ include ../copyright/copyright
 include ../social-buttons/social-buttons
 
 mixin footer(options = {})
-  - var footerClass = options.isBorderTop ? "page-footer  page-footer--border-top" : "page-footer"
+  -
+    const footerClass = options.isBorderTop
+      ? "page-footer  page-footer--border-top"
+      : "page-footer";
 
   footer(class=footerClass)
     .container
       .page-footer__wrap
         .page-footer__content
-          div(class='page-footer__col  page-footer__col--large')
+          div(class="page-footer__col  page-footer__col--large")
             +logo()
-            +textContent({ text: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»' })
+            +textContent({ text: "Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»" })
           .page-footer__col-group
             .page-footer__col
               +navMenu({ 
-                title: 'Навигация',
+                title: "Навигация",
                 list: [
-                  { label: 'О нас', path: '#' },
-                  { label: 'Новости', path: '#' },
-                  { label: 'Служба поддержки', path: '#' },
-                  { label: 'Услуги', path: '#' }
+                  { label: "О нас", path: "#" },
+                  { label: "Новости", path: "#" },
+                  { label: "Служба поддержки", path: "#" },
+                  { label: "Услуги", path: "#" }
                 ]
               })
             .page-footer__col
               +navMenu({ 
-                title: 'О нас',
+                title: "О нас",
                 list: [
-                  { label: 'О сервисе', path: '#' },
-                  { label: 'Наша команда', path: '#' },
-                  { label: 'Вакансии', path: '#' },
-                  { label: 'Инвесторы', path: '#' }
+                  { label: "О сервисе", path: "#" },
+                  { label: "Наша команда", path: "#" },
+                  { label: "Вакансии", path: "#" },
+                  { label: "Инвесторы", path: "#" }
                 ]
               })
             .page-footer__col
               +navMenu({ 
-                title: 'Служба поддержки',
+                title: "Служба поддержки",
                 list: [
-                  { label: 'Соглашения', path: '#' },
-                  { label: 'Сообщества', path: '#' },
-                  { label: 'Связь с нами', path: '#' }
+                  { label: "Соглашения", path: "#" },
+                  { label: "Сообщества", path: "#" },
+                  { label: "Связь с нами", path: "#" }
                 ]
               })
-            div(class='page-footer__col  page-footer__col--large')
-              +textContent({ title: 'Подписка', text: 'Получайте специальные предложения и новости сервиса' })
-              +input({ isButtonSplit: true, iconSrc: 'arrow-forward.svg', type: 'email', placeholder: 'Email', isRightSplitAnimation: true })
+            div(class="page-footer__col  page-footer__col--large")
+              +textContent({ title: "Подписка", text: "Получайте специальные предложения и новости сервиса" })
+              +input({ isButtonSplit: true, iconSrc: "arrow-forward.svg", type: "email", placeholder: "Email", isRightSplitAnimation: true })
         .page-footer__side-info
           +copyright({ year: 2018 })
           +socialButtons()
