передаю ключ в footer isEnglish

--- a/src/page/headers-and-footers/headers-and-footers.pug
+++ b/src/page/headers-and-footers/headers-and-footers.pug
@@ -13,4 +13,4 @@ html(lang="en")
     +logo({ isBig: true })
     +header({ isEnglish: true })
     +header({ isEnglish: true, userName: "Cosmin Negoita" })
-    +footer()
+    +footer({ isEnglish: true })
