--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -80,6 +80,7 @@ include ../social-buttons/social-buttons
 
 mixin footer(options = {})
   -
+    const logoText = options.isEnglish ? engText.logo : rusText.logo;
     const navMenuItems = options.isEnglish ? navMenuEngItems : navMenuRusItems;
     const footerClass = options.isBorderTop
       ? "page-footer  page-footer--border-top"
@@ -91,7 +92,7 @@ mixin footer(options = {})
         .page-footer__content
           div(class="page-footer__col  page-footer__col--large")
             +logo()
-            +textContent({ text: "Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»" })
+            +textContent({ text: logoText })
           .page-footer__col-group
             .page-footer__col
               +navMenu(navMenuItems[0])
