добавил футер с шорт версие в headers-and-footers

--- a/src/page/headers-and-footers/headers-and-footers.pug
+++ b/src/page/headers-and-footers/headers-and-footers.pug
@@ -14,3 +14,4 @@ html(lang="en")
     +header({ isEnglish: true })
     +header({ isEnglish: true, userName: "Cosmin Negoita" })
     +footer({ isEnglish: true, isEmailInputLongText: true })
+    +footer({ isEnglish: true, isShort: true })
