--- a/src/page/headers-and-footers/headers-and-footers.pug
+++ b/src/page/headers-and-footers/headers-and-footers.pug
@@ -13,5 +13,5 @@ html(lang="en")
     +logo({ isBig: true })
     +header({ isEnglish: true })
     +header({ isEnglish: true, userName: "Cosmin Negoita" })
-    +footer({ isEnglish: true, isEmailInputLongText: true })
+    +footer({ isEnglish: true, emailInputPlaceholder: "Your email address" })
     +footer({ isEnglish: true, isShort: true })
